static_library("app") {
  sources = [
    "g/user/index_generated.h",
    "g/user/fbs_schema.h",
    
    "src/util.h",
    "src/pstore.h",
    "src/rpc.h",
    "src/ui.h",
    "src/app.h",
    "src/app.cpp",
  ]
  public_deps = [
    "//deps/brynet:net",
  ]
  deps = [
    "//deps/brynet:utils",
    "//deps/brynet:timer",
    "//deps/brynet:http",
    "//deps/flatbuffers:flatbuffers",
    "//deps/nana:base",
    "//deps/nana:gui",
  ]
}

executable("todo") {
  sources = [ "src/main.cpp" ]
  deps = [ ":app" ]
}
