static_library("app") {
  sources = [
    "g/user/index_generated.h",
    "g/user/fbs_schema.h",
    
    "src/ui.h",
    "src/app.h",
    "src/app.cpp",
  ]
  public_deps = [
    "//deps/brynet:net",
  ]
  deps = [
    "//deps/coreds:coreds",
    "//deps/brynet:utils",
    "//deps/brynet:timer",
    "//deps/brynet:http",
    "//deps/flatbuffers:flatbuffers",
    # doesn't compile on msvc 2015 
    #"//deps/asap:asap",
    "//deps/nana:base",
    "//deps/nana:gui",
  ]
}

executable("todo") {
  sources = [ "src/main.cpp" ]
  deps = [ ":app" ]
}
