static_library("app") {
  sources = [
    "g/user/index_generated.h",
    "g/user/fbs_schema.h",
    
    "src/util.h",
    "src/ui.h",
    "src/pager.h",
    "src/app.h",
    "src/app.cpp",
  ]
  public_deps = [
    "//deps/brynet:net",
  ]
  deps = [
    "//deps/coreds:coreds",
    "//deps/brynet:utils",
    "//deps/brynet:timer",
    "//deps/brynet:http",
    "//deps/flatbuffers:flatbuffers",
    #"//deps/fmt:fmt",
    "//deps/nana:base",
    "//deps/nana:gui",
  ]
}

executable("todo") {
  sources = [ "src/main.cpp" ]
  deps = [ ":app" ]
}

executable("todo-pdb") {
  sources = [ "src/main-pdb.cpp" ]
  deps = [ ":app", "//deps/tiny-process-library:tpl" ]
}

executable("todo-uv") {
  sources = [ "src/main-uv.cpp" ]
  deps = [ ":app", "//gn-deps/libuv:libuv", ]
}

